# groep-ta-2020-2021-billy-yousra-sander-rochee

./: CMakeLists.txt  Quiz.cpp  Quiz.h  Vraag.cpp  Vraag.h  Vragen.cpp  Vragen.h  algemeen.cpp  algemeen.h  main.cpp  test.json  voorbeeldJson.json
automaten/: DFA.cpp  DFA.h  ENFA.cpp  FA.cpp  FA.h  RE.cpp  RE.h
